--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <script src="sketch.js"></script>
-    <script src="game.js"></script>
-    <script src="player.js"></script>
-    <script src="moveable.js"></script>
-    <script src="renderers.js"></script>
-    <script src="firework.js"></script>
-    <script src="particle.js"></script>
-    <script src="star.js"></script>
-    <script src="scoreTip.js"></script>
-    <script src="gun.js"></script>
-    <script src="followRocket.js"></script>
-    <script src="gravityMine.js"></script>
-    <script src="message.js"></script>
+    <script src="./classes/sketch.js"></script>
+    <script src="./classes/game.js"></script>
+    <script src="./classes/player.js"></script>
+    <script src="./classes/moveable.js"></script>
+    <script src="./classes/renderers.js"></script>
+    <script src="./classes/firework.js"></script>
+    <script src="./classes/particle.js"></script>
+    <script src="./classes/star.js"></script>
+    <script src="./classes/scoreTip.js"></script>
+    <script src="./classes/gun.js"></script>
+    <script src="./classes/followRocket.js"></script>
+    <script src="./classes/gravityMine.js"></script>
+    <script src="./classes/message.js"></script>
   </head>
   <body oncontextmenu="return false;">
-    <embed name="music" src="Rhinoceros.mp3" loop="true" hidden="true" autostart="true" />
+    <embed name="music" src="./assets/Rhinoceros.mp3" loop="true" hidden="true" autostart="true" />
       <!-- <audio name="explosion" id="explosion" src="explode.wav" hidden="true" autostart="false"> -->
-    <audio name="explosion1" id="explosion1" src="explosion1.wav" hidden="true" autostart="false"></audio>
-    <audio name="explosion2" id="explosion2" src="explosion2.mp3" hidden="true" autostart="false"></audio>\
+    <audio name="explosion1" id="explosion1" src="./assets/explosion1.wav" hidden="true" autostart="false"></audio>
+    <audio name="explosion2" id="explosion2" src="./assets/explosion2.mp3" hidden="true" autostart="false"></audio>\
   </body>
 </html>
