renamed fireworks to rockets for brevity

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="./classes/player.js"></script>
     <script src="./classes/moveable.js"></script>
     <script src="./classes/renderers.js"></script>
-    <script src="./classes/firework.js"></script>
+    <script src="./classes/rocket.js"></script>
     <script src="./classes/particle.js"></script>
     <script src="./classes/star.js"></script>
     <script src="./classes/scoreTip.js"></script>
