--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <script src="classes/events.js"></script>
     <script src="./classes/sketch.js"></script>
     <script src="./classes/game.js"></script>
     <script src="./classes/player.js"></script>
@@ -20,6 +21,7 @@
     <script src="./classes/followRocket.js"></script>
     <script src="./classes/gravityMine.js"></script>
     <script src="./classes/message.js"></script>
+    <script src="classes/bomb.js"></script>
   </head>
   <body oncontextmenu="return false;">
     <embed name="music" src="./assets/Rhinoceros.mp3" loop="true" hidden="true" autostart="true" />
