bomb logic and renderer stuff done

--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
   </head>
   <body oncontextmenu="return false;">
     <embed name="music" src="./assets/Rhinoceros.mp3" loop="true" hidden="true" autostart="true" />
-      <!-- <audio name="explosion" id="explosion" src="explode.wav" hidden="true" autostart="false"> -->
     <audio name="explosion1" id="explosion1" src="./assets/explosion1.wav" hidden="true" autostart="false"></audio>
-    <audio name="explosion2" id="explosion2" src="./assets/explosion2.mp3" hidden="true" autostart="false"></audio>\
+    <audio name="explosion2" id="explosion2" src="./assets/explosion2.mp3" hidden="true" autostart="false"></audio>
+    <div class="help">
+      <h3>How To Play</h3>
+      <p>Stop the Rockets From Reaching Earth! 5 Rockets Strikes and Its Game Over! Earn powerups for destroying rockets to aid in your endeavors.</p>
+      <h3>Controls</h3>
+      <p>Default Attack - Left Click on Individual Rockets</p>
+      <p>Gravity Mine - Right Click</p>
+      <p>Nuke - Spacebar</p>
+    </div>
   </body>
 </html>
