--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <embed name="music" src="./assets/Rhinoceros.mp3" loop="true" hidden="true" autostart="true" />
     <audio name="explosion1" id="explosion1" src="./assets/explosion1.wav" hidden="true" autostart="false"></audio>
     <audio name="explosion2" id="explosion2" src="./assets/explosion2.mp3" hidden="true" autostart="false"></audio>
+    <audio name="bomb" id="bomb" src="./assets/bomb.wav" hidden="true" autostart="false"></audio>
     <div class="help">
       <h3>How To Play</h3>
       <p>Stop the Rockets From Reaching Earth! 5 Rockets Strikes and Its Game Over! Earn powerups for destroying rockets to aid in your endeavors.</p>
