trying to use pop instead of set number

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <audio name="bomb" id="bomb" src="./assets/bomb.wav" hidden="true" autostart="false"></audio>
     <div class="help">
       <h3>How To Play</h3>
-      <p>Stop the Rockets From Reaching Earth! 5 Rockets Strikes and Its Game Over! Earn powerups for destroying rockets to aid in your endeavors.</p>
+      <p>Stop the Rockets From Reaching Earth! If Earth's Population Reaches 0 It's Game Over! Earn Powerups for Destroying Rockets to Aid in your Endeavors.</p>
       <h3>Controls</h3>
       <p>Default Attack - Left Click on Individual Rockets</p>
       <p>Gravity Mine - Right Click</p>
