--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <p>Default Attack - Left Click on Individual Rockets</p>
       <p>Gravity Mine - Right Click</p>
       <p>Nuke - Spacebar</p>
+      <p>Toggle Inventory - i</p>
     </div>
   </body>
 </html>
