added asteroid objects with physics

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="./classes/gravityMine.js"></script>
     <script src="./classes/message.js"></script>
     <script src="classes/bomb.js"></script>
+    <script src="classes/asteroid.js"></script>
   </head>
   <body oncontextmenu="return false;">
     <embed name="music" src="./assets/Rhinoceros.mp3" loop="true" hidden="true" autostart="true" />
@@ -30,7 +31,7 @@
     <audio name="bomb" id="bomb" src="./assets/bomb.wav" hidden="true" autostart="false"></audio>
     <div class="help">
       <h3>How To Play</h3>
-      <p>Stop the Rockets From Reaching Earth! If Earth's Population Reaches 0 It's Game Over! Earn Powerups for Destroying Rockets to Aid in your Endeavors.</p>
+      <p>Protect The Earth! If Earth's Population Reaches 0 It's Game Over! Earn Powerups for Protecting Earth to Aid in your Endeavors.</p>
       <h3>Controls</h3>
       <p>Default Attack - Left Click on Individual Rockets</p>
       <p>Gravity Mine - Right Click</p>
