full screen and help

--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
     <audio name="explosion1" id="explosion1" src="./assets/explosion1.wav" hidden="true" autostart="false"></audio>
     <audio name="explosion2" id="explosion2" src="./assets/explosion2.mp3" hidden="true" autostart="false"></audio>
     <audio name="bomb" id="bomb" src="./assets/bomb.wav" hidden="true" autostart="false"></audio>
-    <div class="help">
-      <h3>How To Play</h3>
-      <p>Protect The Earth! If Earth's Population Reaches 0 It's Game Over! Earn Powerups for Protecting Earth to Aid in your Endeavors.</p>
-      <h3>Controls</h3>
-      <p>Default Attack - Left Click on Individual Rockets</p>
-      <p>Gravity Mine - Right Click</p>
-      <p>Nuke - Spacebar</p>
-      <p>Toggle Inventory - i</p>
+    <div id="help" class="help">
+        <div>
+        <h3>How To Play</h3>
+        <p>Protect The Earth! If Earth's Population Reaches 0 It's Game Over! Earn Powerups for Protecting Earth to Aid in your Endeavors.</p>
+        <h3>Controls</h3>
+        <p>Default Attack - Left Click on Individual Rockets</p>
+        <p>Gravity Mine - Right Click</p>
+        <p>Nuke - Spacebar</p>
+        <p>Toggle Inventory - i</p>
+      </div>
     </div>
   </body>
 </html>
