--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
     <script src="classes/bomb.js"></script>
     <script src="classes/asteroid.js"></script>
   </head>
-  <body oncontextmenu="return false;">
+  <body id="body" oncontextmenu="return false;">
     <embed name="music" src="./assets/Rhinoceros.mp3" loop="true" hidden="true" autostart="true" />
     <audio name="explosion1" id="explosion1" src="./assets/explosion1.wav" hidden="true" autostart="false"></audio>
     <audio name="explosion2" id="explosion2" src="./assets/explosion2.mp3" hidden="true" autostart="false"></audio>
     <audio name="bomb" id="bomb" src="./assets/bomb.wav" hidden="true" autostart="false"></audio>
     <div id="help" class="help">
         <div>
+          <div id="playButton" class="button">Play Game</div>
         <h3>How To Play</h3>
         <p>Protect The Earth! If Earth's Population Reaches 0 It's Game Over! Earn Powerups for Protecting Earth to Aid in your Endeavors.</p>
         <h3>Controls</h3>
@@ -40,5 +41,11 @@
         <p>Toggle Inventory - i</p>
       </div>
     </div>
+    <script>
+      let playBtn = document.getElementById("playButton");
+      playBtn.addEventListener("click", ()=>{
+        document.getElementById("body").scrollIntoView({block: 'start', behavior: 'smooth'})
+      })
+    </script>
   </body>
 </html>
